third_party/move/move-compiler-v2/tests/checking/positional_fields/struct_duplicate_ability_decls.move
module 0x42::test {
	struct S has copy {} has copy;

	struct T<T> has copy { x: T } has drop;
}
